# DeepSearch

./: .gitignore  pyproject.toml
app/core/: config.py  llms.py
app/graph/: graph.py
app/module/Base/: node.py
app/module/feedback/: module.py
app/module/research/: module.py
app/module/state/: __init__.py  state.py
app/prompt/: load_prompt.py
app/prompt/feedback/: create_question.yml
app/prompt/search/: prompt.yml
