[project]
name = "deepsearch"
version = "0.1.0"
description = "DeepSearch with LangGraph"
authors = [
    {name = "shkoh"}
]
license = {text = "Apache-2.0 license"}
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "langgraph (>=0.3.5,<0.4.0)",
    "langchain (>=0.3.20,<0.4.0)",
    "langchain-core (>=0.3.41,<0.4.0)",
    "langchain-openai (>=0.3.7,<0.4.0)",
    "langchain-community (>=0.3.19,<0.4.0)",
    "firecrawl-py (>=1.13.5,<2.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "pydantic (>=2.10.6,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
